--- a/css/fundo.css
+++ b/css/fundo.css
@@ -1,7 +1,7 @@
 body{
     background-image: url('../img/deitadosNaGrama.jfif'); 
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
+    background-size: 100% 100%;
     background-position: top;
     background-attachment: fixed;
     
@@ -22,41 +22,33 @@ body{
     right:0px;
     background: rgba(255, 255, 255, 0.6)
 }
-
-.nomenoivos{
-    width: 400px;
-
+.mapa div h2{
+    position: absolute;
+    left: 15px;
 }
-
-.nomenoivos > nav h3{
+.nomenoivos > nav{
+    display: flex;
+    justify-content:flex-start;
+}
+.nomenoivos h1{
     font-family: 'Satisfy', cursive;
     font-family: 'The Nautigal', cursive;
-    color: rgb(0, 0, 0);
-    font-size: 32px;
-    background: rgba(255, 255, 255, 0.6);
-    
-}
-.nomenoivos h2{
-    font-family: 'Satisfy', cursive;
-    font-family: 'The Nautigal', cursive;
-    font-size: 82px;
-    margin-top: 3%;
+    font-size: 182px;
+    margin-top: 1%;
     color: rgb(255, 255, 255);
     text-shadow: 4px 4px #000;
 }
 
-@media screen and (max-width: 930px)  {
+@media screen and (max-width: 1070px)  {
 .mapa iframe{
     margin-left: 10px;
     width: 80%;
+   
+
 }
-.screen{
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-h1,h2,p, div{
-    text-align: center;
+.nomenoivos h1{
+    width: 100%;
+    font-size: 140px;
 }
 
 }
