Ajuste de responsividade

--- a/css/fundo.css
+++ b/css/fundo.css
@@ -1,7 +1,7 @@
 body{
     background-image: url('../img/deitadosNaGrama.jfif'); 
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
+    background-size: 100% 100%;
     background-position: top;
     background-attachment: fixed;
     
@@ -48,7 +48,7 @@ body{
 @media screen and (max-width: 930px)  {
 .mapa iframe{
     margin-left: 10px;
-    width: 80%;
+    width: 100%;
 }
 .screen{
     display: flex;
@@ -60,3 +60,4 @@ h1,h2,p, div{
 }
 
 }
+
