--- a/css/cronometro.css
+++ b/css/cronometro.css
@@ -66,3 +66,15 @@
     }
 
 }
+@media screen and (max-width: 480px)  {
+    .msgECronometro{
+        width: 100%;
+    }
+    #cronometro{
+        width: 100%;
+    }
+    .mensagemCronometro{
+        width: 100%;
+    }
+
+}
