--- a/css/navbar.css
+++ b/css/navbar.css
@@ -92,7 +92,7 @@ nav .menu {
 
 @media screen and (max-width: 537px)  {
     nav .menu {
-        width: 300px;
+        width: 100%;
         padding-left: 20px;
         padding-right: 20px;
     }
