--- a/css/navbar.css
+++ b/css/navbar.css
@@ -69,8 +69,12 @@ nav .menu {
 
 
 @media screen and (max-width: 1160px)  {
+    body > nav {
+        display: flex;
+        justify-content:left; 
+    }
     nav .menu {
-        width: 100%;
+        width: 50%;
     }
     .menu li a {
         color: rgb(0, 0, 0);
@@ -91,11 +95,12 @@ nav .menu {
     }
 
 @media screen and (max-width: 537px)  {
-    nav .menu {
-        width: 100%;
-        padding-left: 20px;
-        padding-right: 20px;
+    body > nav {
+        display: flex;
+        justify-content:left; 
     }
+    
+
     .menu li a {
         font-weight: bold;
 
