--- a/css/navbar.css
+++ b/css/navbar.css
@@ -74,30 +74,25 @@ nav .menu {
         justify-content:left; 
     }
     nav .menu {
-        width: 50%;
+        width: 70%;
+        padding-left: 0;
+        padding-right: 0;
     }
     .menu li a {
-        color: rgb(0, 0, 0);
-        text-decoration: none;
-        padding: 5px 10px;
-        display: flex;
-        font-size: 16px;
-        font-weight: bold;
-        
+        padding: 1px 10px;
     }
     .menu li ul li {
         border: 1px solid #c0c0c0;
         display: block;
         width: 150px;
     }
-
-    
     }
 
 @media screen and (max-width: 537px)  {
     body > nav {
         display: flex;
         justify-content:left; 
+        width: 590px;
     }
     
 
@@ -107,11 +102,10 @@ nav .menu {
     }
     .menu li a:hover {
         background: #333;
-        height: 35px;
+        height: 62px;
     }
     .menu li ul {
-
-        margin-top: 16px;
+        margin-top: 36px;
     }
 
 }
