--- a/css/fundo.css
+++ b/css/fundo.css
@@ -1,31 +1,14 @@
 body{
     background-image: url('../img/deitadosNaGrama.jfif'); 
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: 100vw 100vh;
     background-position: top;
     background-attachment: fixed;
     
 }
-.mapa iframe{
-    width: 99%;
-    height: 92%;
-    position: absolute;
-    bottom: 0;
-    right:0px;
-    
-}
-.mapa div{
-    width: 35%;
-    height: 35%;
-    position: absolute;
-    bottom: 0;
-    right:0px;
-    background: rgba(255, 255, 255, 0.6)
-}
 
 .nomenoivos{
     width: 400px;
-
 }
 
 .nomenoivos > nav h3{
@@ -45,10 +28,7 @@ body{
 }
 
 @media screen and (max-width: 930px)  {
-.mapa iframe{
-    margin-left: 10px;
-    width: 100%;
-}
+
 .screen{
     display: flex;
     justify-content: center;
@@ -59,8 +39,17 @@ h1,h2,p, div{
 }
 
 }
-@media screen and (max-width: 480px)  {
-
+@media screen and (max-width: 550px)  {
+    body{
+        background-image: url('../img/deitadosNaGrama.jfif'); 
+        background-repeat: no-repeat;
+        background-size: 420px 1080px;
+        background-position: top;
+        background-position: left;
+        background-attachment: fixed;
+        
+    }
+    
 .nomenoivos{
     width: 80%;
 }
