--- a/css/fundo.css
+++ b/css/fundo.css
@@ -48,9 +48,31 @@ h1,h2,p, div{
 @media screen and (max-width: 780px)  {
 
     body{
-        background-image: url('../img/deitadosNaGrama.jfif'); 
+        background-image: url('../img/780.jpg'); 
         background-size: 100% 100%;
-      
+        background-position: top;
+        background-attachment:fixed;
+        
+    }
+.screen{
+    display: flex;
+    justify-content: center;
+}
+h1,h2,p, div{
+    text-align: center;
+}
+.nomenoivos{
+    width: 55%;
+}
+
+}
+@media screen and (max-width: 780px)  {
+
+    body{
+        background-image: url('../img/780.jpg'); 
+        background-size: 100% 100%;
+        background-position: top;
+        background-attachment:fixed;
         
     }
 .screen{
