--- a/css/navbar.css
+++ b/css/navbar.css
@@ -85,13 +85,8 @@ nav .menu {
     }
 
 @media screen and (max-width: 780px)  {
-    body > nav {
-        display: flex;
-        justify-content:left; 
-        width: 80%;
-    }
+   
     nav .menu {
-        width: 400px;
         padding-left: 0;
         padding-right: 0;
         justify-content:space-around;
@@ -115,8 +110,25 @@ nav .menu {
     }
 
 }
-    @media screen and (max-width: 440px)  {
+    @media screen and (max-width: 480px)  {
        
+        body > nav {
+            display: flex;
+            justify-content:left; 
+        }
+        nav .menu {
+            width: 400px;
+            padding-left: 0;
+            padding-right: 0;
+            justify-content:space-around;
+    
+        }
+    
+        .menu li a {
+            font-weight: bold;
+            padding: 5px 0px 5px 0px;
+    
+        }
         .menu li a:hover {
             background: #333;
             height: 53px;
