--- a/css/navbar.css
+++ b/css/navbar.css
@@ -90,7 +90,7 @@ nav .menu {
         padding-left: 0;
         padding-right: 0;
         justify-content:space-around;
-
+        width: 400px;
     }
 
     .menu li a {
@@ -110,7 +110,7 @@ nav .menu {
     }
 
 }
-    @media screen and (max-width: 480px)  {
+    @media screen and (max-width: 390px)  {
        
         body > nav {
             display: flex;
