--- a/css/ocasamento.css
+++ b/css/ocasamento.css
@@ -33,3 +33,9 @@ body{
     text-align: left;
     background:  rgba(255, 255, 255, 0.6)
 }
+@media screen and (max-width: 780px)  {
+    body{
+        background-image: url('../img/780.jpg'); 
+    }
+
+}
