--- a/css/navbar.css
+++ b/css/navbar.css
@@ -85,14 +85,20 @@ nav .menu {
     }
 
 @media screen and (max-width: 780px)  {
-   
+    body > nav{
+        justify-content: left;
+    }
     nav .menu {
         padding-left: 0;
         padding-right: 0;
-        justify-content:space-around;
         width: 400px;
+        display: flex;
+        justify-content:center;
+        
     }
-
+    .menu{
+        width: 100px;
+    }
     .menu li a {
         font-weight: bold;
         padding: 5px 0px 5px 0px;
@@ -106,35 +112,35 @@ nav .menu {
         margin-top: 36px;
     }
     .menu li {
-        width: 70px;
+        width: 80px;
     }
 
 }
-    @media screen and (max-width: 390px)  {
+    @media screen and (max-width: 5280px)  {
        
-        body > nav {
-            display: flex;
-            justify-content:left; 
-        }
+
+       
         nav .menu {
-            width: 400px;
             padding-left: 0;
             padding-right: 0;
-            justify-content:space-around;
-    
+            width: 300px;
+            display: flex;
+            justify-content:center;
+            
         }
+        
     
         .menu li a {
-            font-weight: bold;
-            padding: 5px 0px 5px 0px;
+            font-size: 14px;
     
         }
         .menu li a:hover {
             background: #333;
-            height: 53px;
+            height: 40px;
         }
         .menu li ul {
     
-            margin-top: 36px;
+            margin-top: 20px;
         }
+    
     }
