--- a/css/ocasamento.css
+++ b/css/ocasamento.css
@@ -39,3 +39,13 @@ body{
     }
 
 }
+@media screen and (max-width: 780px)  {
+    body{
+        background-image: url('../img/428.jpg'); 
+    }
+    .mapa iframe{
+        width: 300px;
+        height: 250px;
+    }
+
+}
