--- a/css/ocasamento.css
+++ b/css/ocasamento.css
@@ -36,6 +36,8 @@ body{
 @media screen and (max-width: 780px)  {
     body{
         background-image: url('../img/780.jpg'); 
+        background-size: 100% 100%;
+
     }
 
 }
@@ -47,5 +49,14 @@ body{
         width: 300px;
         height: 250px;
     }
+    .nomenoivos{
+        width: 368px;
+    }
+    .nomenoivos h2{
+        margin-left: 15px;
 
+    }
+    .nomenoivos pre{
+     width: 368px;
+    }
 }
