--- a/css/fundo.css
+++ b/css/fundo.css
@@ -66,7 +66,7 @@ body{
     width: 600px;
 }
 .nomenoivos h3{
-    width: 600px;
+    width: 510px;
 }
 .screen{
     display: flex;
@@ -85,6 +85,9 @@ body{
 }
 .nomenoivos{
     width: 365px;
+}
+.nomenoivos h3{
+    width: 350px;
 }
 .screen{
     display: flex;
