--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,4 +1,29 @@
 body{
     backdrop-filter: blur(10px);
     height: 58rem;
-} 
+}
+.contato{
+    display: flex;
+    justify-content: center;
+}
+.noivos h1{
+    text-align: center;
+    margin-top: 20px;
+    font-family: 'Satisfy', cursive;
+    font-family: 'The Nautigal', cursive;
+    color: rgb(255, 255, 255);
+    text-shadow: 4px 4px #000;
+    font-size: 78px;
+}
+.noivos pre{
+    text-align: left;
+    margin-top: 32px;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px #000;
+}
+.suellen, .alisson{
+    display: inline-block;
+    text-align: left;
+    padding: 15px;
+    font-size: 18px;
+}
