--- a/css/sobre.css
+++ b/css/sobre.css
@@ -14,6 +14,7 @@ body{
     color: rgb(255, 255, 255);
     text-shadow: 4px 4px #000;
     font-size: 78px;
+    width: 500px;
 }
 .noivos pre{
     text-align: left;
@@ -26,4 +27,9 @@ body{
     text-align: left;
     padding: 15px;
     font-size: 18px;
+}
+@media screen and (max-width: 1080px)  {
+    .suellen, .alisson{
+        display: flex;
+    }
 }
