--- a/css/sobre.css
+++ b/css/sobre.css
@@ -2,45 +2,21 @@ body{
     backdrop-filter: blur(10px);
     height: 58rem;
 }
-.contato{
+.centralizartexto{
+    margin-top: 20px;
     display: flex;
     justify-content: center;
 }
-.noivos h1{
-    text-align: center;
+.texto{
     margin-top: 20px;
-    font-family: 'Satisfy', cursive;
-    font-family: 'The Nautigal', cursive;
+    text-align: center;
+}
+.texto h1{
+    font-size: 52px;
     color: rgb(255, 255, 255);
     text-shadow: 4px 4px #000;
-    font-size: 78px;
-    width: 500px;
 }
-.noivos pre{
-    text-align: left;
-    margin-top: 32px;
-    color: rgb(255, 255, 255);
-    text-shadow: 2px 2px #000;
-}
-.suellen, .alisson{
-    display: inline-block;
-    text-align: left;
-    padding: 15px;
-    font-size: 18px;
-}
-@media screen and (max-width: 1080px)  {
-    .contato{
-        display: block;
-        
-    }
-    .noivos h1{
-        font-size: 54px;
-        width: 350px;
-    }
-    .suellen, .alisson{
-        display: block;
-        text-align: left;
-        padding: 15px;
-        font-size: 14px;
-    }
+.texto pre{
+    margin-top: 15px;
+    font-size: 22px;
 }
