--- a/css/fundo.css
+++ b/css/fundo.css
@@ -4,9 +4,25 @@ body{
     background-size: 100vw 100vh;
     background-position: top;
     background-attachment: fixed;
-    
 }
-
+iframe{
+    display: none;
+}
+.convite {
+    text-align: center;
+}
+.convite input{
+    background: white;
+    padding: 15px;
+    background: rgba(255, 255, 255, 0.6);
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+}
+.convite input:hover{
+    background: rgb(206, 64, 64);
+    color: #fff;
+}
 .nomenoivos{
     width: 400px;
 }
@@ -26,7 +42,7 @@ body{
 .nomenoivos h2{
     font-family: 'Satisfy', cursive;
     font-family: 'The Nautigal', cursive;
-    font-size: 102px;
+    font-size: 152px;
     margin-top: 3%;
     color: rgb(255, 255, 255);
     text-shadow: 4px 4px #000;
