--- a/css/navbar.css
+++ b/css/navbar.css
@@ -90,7 +90,7 @@ nav .menu {
     nav .menu {
         padding-left: 0;
         padding-right: 0;
-        width: 450px;
+        width: 100%;
         display: flex;
         justify-content:center;
         
@@ -100,7 +100,7 @@ nav .menu {
     }
     .menu li a {
         font-weight: bold;
-        padding: 5px 0px 5px 0px;
+        padding: 0px 0px 0px 0px;
 
     }
     .menu li a:hover {
