--- a/css/navbar.css
+++ b/css/navbar.css
@@ -90,7 +90,7 @@ nav .menu {
     nav .menu {
         padding-left: 0;
         padding-right: 0;
-        width: 450px;
+        width: 470px;
         display: flex;
         justify-content:center;
         
@@ -132,7 +132,7 @@ nav .menu {
     
         .menu li a {
             font-size: 14px;
-    
+            padding-left: 15px;
         }
         .menu li a:hover {
             background: #333;
