--- a/css/galeria.css
+++ b/css/galeria.css
@@ -5,7 +5,7 @@
   top: 54%;
   transform: translateY(-50%);
   width: 100%;
-  height: 95%;
+  height: 90%;
   max-height: 50vw;
   overflow: hidden;
 }
@@ -56,28 +56,32 @@
   transform: translateX(-100%) scale(.8);
 }
 
+/* Posição da proxima imagem esquerda */
 .gallery__item:nth-child(2) {
   left: 0;
   z-index: 2;
-  transform: translateX(-50%) scale(.8);
+  transform: translateX(-15%) scale(.6);
 }
 
+/* Posição da imagem central */
 .gallery__item:nth-child(3) {
   left: 50%;
   z-index: 4;
-  transform: translateX(-50%) scale(1);
+  transform: translateX(-50%) scale(0.8);
 }
 
+/* Posição da proxima imagem direita */
 .gallery__item:nth-child(4) {
   left: 100%;
   z-index: 2;
-  transform: translateX(-50%) scale(.8);
+  transform: translateX(-85%) scale(.6);
 }
 
+/* Imagem fica escondida */
 .gallery__item:nth-child(n+5) {
   left: 100%;
   z-index: 1;
-  transform: scale(.8);
+  transform: scale(.6);
 }
 
 /* Controllers */
@@ -89,7 +93,7 @@
   z-index: 4;
   width: 50%;
   height: 100%;
-  transform: translateX(-50%) translateY(-50%) scale(.8);
+  transform: translateX(-50%) translateY(-50%) scale(1.5);
   cursor: pointer;
 }
 
