--- a/css/galeria.css
+++ b/css/galeria.css
@@ -1,4 +1,6 @@
 
+
+
 /* Gallery */
 .gallery {
   position: absolute;
@@ -21,15 +23,6 @@
   z-index: 3;
 }
 
-.gallery:before {
-  left: 0;
-  background:  linear-gradient(to right, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-}
-
-.gallery:after {
-  right: 0;
-  background:  linear-gradient(to left, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-}
 
 .gallery__stream {
   position: relative;
@@ -152,3 +145,99 @@
 .bg-13 {
   background-image: url(../fotos/MIRANHAJAEGB.png);
 }
+
+#seta {
+  position: absolute;
+  padding: 20px;
+  box-shadow: 2px -2px 0 1px rgb(255, 255, 255) inset;
+  border: solid transparent;
+  border-width: 0 0 2px 2px;
+  transform: rotate(45deg);
+  top: 50%;
+  left: 31%;
+}
+#setad {
+  position: absolute;
+  padding: 20px;
+  box-shadow: 2px -2px 0 1px rgb(255, 255, 255) inset;
+  border: solid transparent;
+  border-width: 0 0 2px 2px;
+  transform: rotate(222deg);
+  top: 50%;
+  left: 67%;
+}
+
+@media screen and (max-width: 528px)  {
+/* Gallery */
+.gallery {
+  top: 50%;
+  height: 95%;
+  max-height: 500vw;
+}
+
+.gallery:before,
+.gallery:after {
+  width: 0%;
+  height: 0%;
+}
+/* Zoom */
+.gallery__stream {
+  position: relative;
+  top: 45%;
+  transform: translateY(-50%);
+  width: 100%;
+  height: 100%;
+}
+/* Posição da imagem dentro caixa */
+.gallery__item {
+  position: absolute;
+  width: 500px;
+  height: 100%;
+  transition: 1s all ease;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 5px;
+}
+/* Posição da proxima imagem esquerda */
+.gallery__item:nth-child(2) {
+  left: 0;
+  z-index: 2;
+  transform: translateX(-50%) scale(.4);
+}
+
+/* Posição da imagem central */
+.gallery__item:nth-child(3) {
+  left: 50%;
+  z-index: 4;
+  transform: translateX(-50%) scale(0.6);
+}
+/* Posição da proxima imagem direita */
+.gallery__item:nth-child(4) {
+  left: 100%;
+  z-index: 2;
+  transform: translateX(-50%) scale(.4);
+}
+/* Controllers */
+.gallery__prev,
+.gallery__next {
+  position: absolute;
+  top: 50%;
+  z-index: 4;
+  width: 50%;
+  height: 100%;
+  transform: translateX(-50%) translateY(-50%) scale(1);
+}
+#seta {
+  left: 15px;
+}
+#setad {
+  box-shadow: 2px -2px -2px 1px rgb(255, 255, 255) inset;
+  border-width: 0 0 2px 2px;
+  transform: rotate(222deg);
+  top: 50%;
+  left: 85%;
+}
+
+}
+
