--- a/css/galeria.css
+++ b/css/galeria.css
@@ -4,7 +4,7 @@
 /* Gallery */
 .gallery {
   position: absolute;
-  top: 54%;
+  top: 49%;
   transform: translateY(-50%);
   width: 100%;
   height: 90%;
@@ -26,7 +26,7 @@
 
 .gallery__stream {
   position: relative;
-  top: 50%;
+  top: 0%;
   transform: translateY(-50%);
   width: 100%;
   height: 100%;
@@ -34,8 +34,8 @@
 
 .gallery__item {
   position: absolute;
-  width: 47%;
-  height: 100%;
+  width: 57%;
+  height: 1900px;
   transition: 1s all ease;
   background-size: cover;
   background-repeat: no-repeat;
@@ -46,28 +46,28 @@
 .gallery__item:nth-child(1) {
   left: 0;
   z-index: 1;
-  transform: translateX(-100%) scale(.8);
+  transform: translateX(-100%) scale(.2);
 }
 
 /* Posição da proxima imagem esquerda */
 .gallery__item:nth-child(2) {
   left: 0;
   z-index: 2;
-  transform: translateX(-15%) scale(.6);
+  transform: translateX(-20%) scale(.4);
 }
 
 /* Posição da imagem central */
 .gallery__item:nth-child(3) {
   left: 50%;
   z-index: 4;
-  transform: translateX(-50%) scale(0.8);
+  transform: translateX(-50%) scale(0.5);
 }
 
 /* Posição da proxima imagem direita */
 .gallery__item:nth-child(4) {
   left: 100%;
   z-index: 2;
-  transform: translateX(-85%) scale(.6);
+  transform: translateX(-80%) scale(.4);
 }
 
 /* Imagem fica escondida */
@@ -153,7 +153,7 @@
   border: solid transparent;
   border-width: 0 0 2px 2px;
   transform: rotate(45deg);
-  top: 50%;
+  top: 45%;
   left: 31%;
 }
 #setad {
@@ -162,9 +162,10 @@
   box-shadow: 2px -2px 0 1px rgb(255, 255, 255) inset;
   border: solid transparent;
   border-width: 0 0 2px 2px;
-  transform: rotate(222deg);
+  transition: 0.2s;
+  transform:rotate(225deg);
   top: 50%;
-  left: 67%;
+  right: 31%;
 }
 
 @media screen and (max-width: 528px)  {
@@ -173,6 +174,7 @@
   top: 50%;
   height: 95%;
   max-height: 500vw;
+  width: 100%;
 }
 
 .gallery:before,
