--- a/css/galeria.css
+++ b/css/galeria.css
@@ -146,35 +146,14 @@
   background-image: url(../fotos/MIRANHAJAEGB.png);
 } */
 
-#seta {
-  position: absolute;
-  padding: 20px;
-  box-shadow: 2px -2px 0 1px rgb(255, 255, 255) inset;
-  border: solid transparent;
-  border-width: 0 0 2px 2px;
-  transform: rotate(45deg);
-  top: 45%;
-  left: 31%;
-}
-#setad {
-  position: absolute;
-  padding: 20px;
-  box-shadow: 2px -2px 0 1px rgb(255, 255, 255) inset;
-  border: solid transparent;
-  border-width: 0 0 2px 2px;
-  transition: 0.2s;
-  transform:rotate(225deg);
-  top: 50%;
-  right: 31%;
-}
-
 @media screen and (max-width: 528px)  {
 /* Gallery */
 .gallery {
-  top: 50%;
+  top: 400px;
   height: 95%;
   max-height: 500vw;
   width: 400px;
+  
 }
 
 .gallery:before,
@@ -185,7 +164,7 @@
 /* Zoom */
 .gallery__stream {
   position: relative;
-  top: 45%;
+  top: 350px;
   transform: translateY(-50%);
   width: 100%;
   height: 100%;
@@ -200,6 +179,7 @@
   background-repeat: no-repeat;
   background-position: center center;
   border-radius: 5px;
+  
 }
 /* Posição da proxima imagem esquerda */
 .gallery__item:nth-child(2) {
@@ -224,21 +204,11 @@
 .gallery__prev,
 .gallery__next {
   position: absolute;
-  top: 50%;
+  top: 370px;
   z-index: 4;
   width: 50%;
-  height: 100%;
+  height: 500px;
   transform: translateX(-50%) translateY(-50%) scale(1);
-}
-#seta {
-  left: 15px;
-}
-#setad {
-  box-shadow: 2px -2px -2px 1px rgb(255, 255, 255) inset;
-  border-width: 0 0 2px 2px;
-  transform: rotate(222deg);
-  top: 50%;
-  left: 85%;
 }
 
 }
