--- a/css/galeria.css
+++ b/css/galeria.css
@@ -164,7 +164,7 @@
 /* Zoom */
 .gallery__stream {
   position: relative;
-  top: 350px;
+  top: 370px;
   transform: translateY(-50%);
   width: 100%;
   height: 1000px;
@@ -172,8 +172,8 @@
 /* Posição da imagem dentro caixa */
 .gallery__item {
   position: absolute;
-  width: 550px;
-  height: 100%;
+  width: 420px;
+  height: 800px;
   transition: 1s all ease;
   background-size: cover;
   background-repeat: no-repeat;
