--- a/css/galeria.css
+++ b/css/galeria.css
@@ -149,7 +149,7 @@
 @media screen and (max-width: 528px)  {
 /* Gallery */
 .gallery {
-  top: 400px;
+  top: 420px;
   height: 600px;
   max-height: 500vw;
   width: 400px;
@@ -164,16 +164,17 @@
 /* Zoom */
 .gallery__stream {
   position: relative;
-  top: 450px;
+  top: 390px;
   transform: translateY(-50%);
   width: 100%;
-  height: 1000px;
+  height: 750px;
 }
 /* Posição da imagem dentro caixa */
 .gallery__item {
   position: absolute;
+  bottom: 140px;
   width: 400px;
-  height: 800px;
+  height: 100%;
   transition: 1s all ease;
   background-size: cover;
   background-repeat: no-repeat;
