--- a/css/galeria.css
+++ b/css/galeria.css
@@ -1,10 +1,10 @@
-
-
-
+body{
+  font-family: 'Cormorant SC', serif;
+}
 /* Gallery */
 .gallery {
   position: absolute;
-  top: 50%;
+  top: 60%;
   transform: translateY(-50%);
   width: 100%;
   height: 90%;
@@ -53,7 +53,7 @@
 .gallery__item:nth-child(2) {
   left: 0;
   z-index: 2;
-  transform: translateX(-50%) scale(.4);
+  transform: translateX(-20%) scale(.4);
 }
 
 /* Posição da imagem central */
@@ -67,7 +67,7 @@
 .gallery__item:nth-child(4) {
   left: 100%;
   z-index: 2;
-  transform: translateX(-50%) scale(.4);
+  transform: translateX(-80%) scale(.4);
 }
 
 /* Imagem fica escondida */
@@ -84,7 +84,7 @@
   position: absolute;
   top: 50%;
   z-index: 4;
-  width: 50%;
+  width: 40%;
   height: 70%;
   transform: translateX(-50%) translateY(-50%) scale(1.5);
   cursor: pointer;
