--- a/css/ocasamento.css
+++ b/css/ocasamento.css
@@ -4,11 +4,10 @@ body{
     background-size: 100vw 100vh;
     background-position: top;
     background-attachment: fixed;
-    
+    font-family: 'Cormorant SC', serif;
+
 }
 .nomenoivos h2{
-    font-family: 'Satisfy', cursive;
-    font-family: 'The Nautigal', cursive;
     font-size: 82px;
     margin-top: 3%;
     color: rgb(255, 255, 255);
