--- a/css/sujestao.css
+++ b/css/sujestao.css
@@ -6,9 +6,11 @@ button{
     background: none;
     border: none;
     color: rgb(255, 255, 255);
-    font-size: 18px;
+    font-size: 22px;
     padding: 15px;
     cursor: pointer;
+    font-family: 'Cormorant SC', serif;
+
 }
 .centralizartexto{
     margin-top: 20px;
