--- a/css/fundo.css
+++ b/css/fundo.css
@@ -29,7 +29,7 @@ iframe{
     color: red;
     cursor: pointer;
 }
-.convite #bt:hover{
+.convite #bt:hover, .baixa:hover{
     background: rgb(206, 64, 64);
     color: #fff;
 }
