--- a/css/ocasamento.css
+++ b/css/ocasamento.css
@@ -9,7 +9,6 @@ body{
 }
 .nomenoivos h2{
     font-size: 82px;
-    margin-top: 3%;
     color: rgb(255, 255, 255);
     text-shadow: 4px 4px #000;
 }
@@ -30,7 +29,8 @@ body{
     display: flex;
     justify-content: left;
     text-align: left;
-    background:  rgba(255, 255, 255, 0.6)
+    background:  rgba(255, 255, 255, 0.822);
+    padding: 5px;    
 }
 
 @media screen and (max-width: 780px)  {
@@ -47,10 +47,18 @@ body{
         width: 350px;
     }
     .nomenoivos h2{
-        margin-left: 15px;
+        margin-left: 10px;
 
     }
     .nomenoivos pre{
      width: 368px;
+     padding: 5px;
+    }
+}
+@media screen and (max-width: 528px)  {
+    .nomenoivos{
+        display: block;
+        margin-left: 5px;
+        
     }
 }
